@@ -1,3 +1,8 @@
+2008-09-02  Andreas Jaeger  <aj@suse.de>
+
+	* sysdeps/unix/sysv/linux/s390/s390-32/utmp-convert.h: Fix last
+	commit.
+
 2008-08-26  Aurelien Jarno  <aurelien@aurel32.net>
 
 	[BZ #6860]
